--- a/package.xml
+++ b/package.xml
@@ -7,6 +7,7 @@
   <author email="methyldragon@gmail.com">methylDragon</author>
   <maintainer email="methyldragon@gmail.com">methylDragon</maintainer>
   <url type="website">http://github.com/methylDragon</url>
+  <url>http://www.ros.org/wiki/teleop_twist_keyboard_cpp</url>
 
   <license>MIT</license>
 
